--- a/content/posts/react/backend.mdx
+++ b/content/posts/react/backend.mdx
@@ -59,13 +59,13 @@ fetch("https://myapi.com/user")
 
 Para instalarlo podemos ejecutar el siguiente comando en terminal:
 
-```bash
+```powershell
 npm install axios --save
 ```
 
 o
 
-```bash
+```powershell
 yarn add axios
 ```
 
