--- a/content/posts/react/intro.mdx
+++ b/content/posts/react/intro.mdx
@@ -17,12 +17,12 @@ Es una de las librerías más utilizadas por delante de Angular y Vue.
 
 ## CLI - create-react-app
 
-```bash
+```powershell
 npm i -g create-react-app
 npx create-react-app my-first-app
 ```
 
-```bash
+```powershell
 cd my-first-app
 yarn start
 ```
