--- a/content/posts/react/router.mdx
+++ b/content/posts/react/router.mdx
@@ -12,13 +12,13 @@ publishedAt: "2021-08-07T22:00:00.000Z"
 
 Para instalarla ejecutamos lo siguiente en terminal:
 
-```bash
+```powershell
 npm install react-router-dom
 ```
 
 o si utilizamos `yarn`
 
-```bash
+```powershell
 yarn add react-router-dom
 ```
 
