--- a/content/posts/react/backend.mdx
+++ b/content/posts/react/backend.mdx
@@ -4,7 +4,9 @@ summary: >
   Las formas más habituales de comunicarnos con backend en React son axios o 
   fetch. Tanto axios como fetch están basados en promesas.
 category: react
-tags: {}
+tags:
+  options:
+    - react
 draft: false
 publishedAt: '2021-08-08T22:00:00.000Z'
 ---
