--- a/content/posts/react/context-devtool.mdx
+++ b/content/posts/react/context-devtool.mdx
@@ -2,6 +2,9 @@
 title: React Context DevTool
 summary: Depurar Context API de ReactJS con React Context Devtool
 category: react
+tags:
+  options:
+    - react
 draft: false
 publishedAt: '2021-08-16T22:00:00.000Z'
 ---
