--- a/content/posts/react/functional-components.mdx
+++ b/content/posts/react/functional-components.mdx
@@ -1,6 +1,11 @@
 ---
 title: Functional Components ⚛️
 summary: 'En este capítulo vamos a hablar sobre los componentes función de React. '
+category: react
+tags:
+  options:
+    - react
+    - hooks
 draft: false
 publishedAt: '2021-08-02T22:00:00.000Z'
 ---
