--- a/content/posts/chuletas/javascript.mdx
+++ b/content/posts/chuletas/javascript.mdx
@@ -19,6 +19,7 @@ relatedPosts:
   postTwo: content/posts/javascript/spread-tricks.mdx
   postThree: content/posts/javascript/fetch-api.mdx
 draft: false
+featured: true
 publishedAt: '2021-07-08T22:00:00.000Z'
 ---
 
