--- a/content/posts/herramientas/vscode-plugins.mdx
+++ b/content/posts/herramientas/vscode-plugins.mdx
@@ -6,6 +6,7 @@ relatedPosts:
   postOne: content/posts/bookmarks/configuraciones.mdx
   postTwo: content/posts/linux/configurar-ubuntu.mdx
 draft: false
+featured: true
 publishedAt: '2021-06-07T22:00:00.000Z'
 ---
 
