--- a/content/posts/javascript/ajax-async-await.mdx
+++ b/content/posts/javascript/ajax-async-await.mdx
@@ -15,6 +15,7 @@ tags:
 relatedPosts:
   postOne: content/posts/javascript/fetch-api.mdx
 draft: false
+featured: false
 publishedAt: '2021-06-05T22:00:00.000Z'
 ---
 
