--- a/content/posts/javascript/spread-tricks.mdx
+++ b/content/posts/javascript/spread-tricks.mdx
@@ -13,6 +13,7 @@ relatedPosts:
   postTwo: content/posts/javascript/js-react-uno.mdx
   postThree: content/posts/javascript/js-react-dos.mdx
 draft: false
+featured: false
 publishedAt: '2021-06-10T22:00:00.000Z'
 ---
 
