--- a/content/posts/linux/configurar-ubuntu.mdx
+++ b/content/posts/linux/configurar-ubuntu.mdx
@@ -18,6 +18,7 @@ relatedPosts:
   postTwo: content/posts/linux/instalar-mongo.mdx
   postThree: content/posts/linux/touchpad.mdx
 draft: false
+featured: true
 publishedAt: '2021-07-17T22:00:00.000Z'
 ---
 
