--- a/content/posts/linux/firefox-developer.mdx
+++ b/content/posts/linux/firefox-developer.mdx
@@ -12,6 +12,7 @@ relatedPosts:
   postOne: content/posts/linux/configurar-ubuntu.mdx
   postTwo: content/posts/linux/instalar-mongo.mdx
 draft: false
+featured: false
 publishedAt: '2021-07-15T22:00:00.000Z'
 ---
 
