--- a/content/posts/linux/instalar-mongo.mdx
+++ b/content/posts/linux/instalar-mongo.mdx
@@ -11,6 +11,7 @@ relatedPosts:
   postOne: content/posts/linux/configurar-ubuntu.mdx
   postTwo: content/posts/linux/firefox-developer.mdx
 draft: false
+featured: false
 publishedAt: '2021-07-07T22:00:00.000Z'
 ---
 
