--- a/content/posts/linux/touchpad.mdx
+++ b/content/posts/linux/touchpad.mdx
@@ -12,6 +12,7 @@ tags:
 relatedPosts:
   postOne: content/posts/linux/configurar-ubuntu.mdx
 draft: false
+featured: false
 publishedAt: '2021-07-12T22:00:00.000Z'
 ---
 
