--- a/content/posts/react/backend.mdx
+++ b/content/posts/react/backend.mdx
@@ -8,6 +8,11 @@ tags:
   options:
     - react
 draft: false
+featured: false
+relatedPosts:
+  postOne: content/posts/react/indice.mdx
+  postTwo: content/posts/react/context-devtool.mdx
+  postThree: content/posts/react/router.mdx
 publishedAt: '2021-08-08T22:00:00.000Z'
 ---
 
