--- a/content/posts/react/intro.mdx
+++ b/content/posts/react/intro.mdx
@@ -5,7 +5,12 @@ category: react
 tags:
   options:
     - react
+relatedPosts:
+  postOne: content/posts/react/indice.mdx
+  postTwo: content/posts/react/functional-components.mdx
+  postThree: content/posts/react/class-components.mdx
 draft: false
+featured: false
 publishedAt: "2021-08-01T22:00:00.000Z"
 ---
 
