--- a/content/posts/react/router.mdx
+++ b/content/posts/react/router.mdx
@@ -5,8 +5,12 @@ category: react
 tags:
   options:
     - react
-featured: true
+featured: false
 draft: false
+relatedPosts:
+  postOne: content/posts/react/indice.mdx
+  postTwo: content/posts/react/backend.mdx
+  postThree: content/posts/react/conceptos-avanzados.mdx
 publishedAt: "2021-08-07T22:00:00.000Z"
 ---
 
