--- a/content/posts/chuletas/javascript-array.mdx
+++ b/content/posts/chuletas/javascript-array.mdx
@@ -7,6 +7,7 @@ relatedPosts:
   postOne: content/posts/chuletas/javascript-array.mdx
   postTwo: content/posts/chuletas/javascript.mdx
 draft: false
+featured: false
 publishedAt: '2021-07-16T22:00:00.000Z'
 ---
 
