--- a/content/posts/javascript/array-methods.mdx
+++ b/content/posts/javascript/array-methods.mdx
@@ -10,6 +10,7 @@ relatedPosts:
   postTwo: content/posts/javascript/reduce.mdx
   postThree: content/posts/javascript/spread-tricks.mdx
 draft: false
+featured: false
 publishedAt: '2021-06-09T22:00:00.000Z'
 ---
 
