--- a/content/posts/javascript/fetch-api.mdx
+++ b/content/posts/javascript/fetch-api.mdx
@@ -13,6 +13,7 @@ tags:
 relatedPosts:
   postOne: content/posts/javascript/ajax-async-await.mdx
 draft: false
+featured: false
 publishedAt: '2021-06-06T22:00:00.000Z'
 ---
 
