--- a/content/posts/javascript/js-react-dos.mdx
+++ b/content/posts/javascript/js-react-dos.mdx
@@ -11,6 +11,7 @@ relatedPosts:
   postTwo: content/posts/react/indice.mdx
   postThree: content/posts/react/intro.mdx
 draft: false
+featured: false
 publishedAt: '2021-06-13T22:00:00.000Z'
 ---
 
