--- a/content/posts/javascript/js-react-uno.mdx
+++ b/content/posts/javascript/js-react-uno.mdx
@@ -12,6 +12,7 @@ relatedPosts:
   postOne: content/posts/javascript/js-react-dos.mdx
   postTwo: content/posts/react/indice.mdx
 draft: false
+featured: false
 publishedAt: '2021-06-13T22:00:00.000Z'
 ---
 
