--- a/content/posts/javascript/reduce.mdx
+++ b/content/posts/javascript/reduce.mdx
@@ -8,6 +8,7 @@ relatedPosts:
   postTwo: content/posts/javascript/spread-tricks.mdx
   postThree: content/posts/chuletas/javascript-array.mdx
 draft: false
+featured: false
 publishedAt: '2021-06-08T22:00:00.000Z'
 ---
 
