--- a/content/posts/linux/101-comandos-bash-avanzados.mdx
+++ b/content/posts/linux/101-comandos-bash-avanzados.mdx
@@ -8,7 +8,8 @@ tags:
     - terminal
     - zsh
     - linux
-draft: false
+draft: true
+featured: false
 publishedAt: '2021-09-08T22:00:00.000Z'
 ---
 
