--- a/content/posts/linux/101-comandos-bash.mdx
+++ b/content/posts/linux/101-comandos-bash.mdx
@@ -12,7 +12,8 @@ tags:
     - terminal
     - zsh
     - linux
-draft: false
+draft: true
+featured: false
 publishedAt: '2021-09-29T22:00:00.000Z'
 ---
 
