--- a/content/posts/react/conceptos-avanzados.mdx
+++ b/content/posts/react/conceptos-avanzados.mdx
@@ -7,6 +7,11 @@ tags:
     - hoc
     - react
 draft: false
+featured: false
+relatedPosts:
+  postOne: content/posts/react/indice.mdx
+  postTwo: content/posts/react/router.mdx
+  postThree: content/posts/react/context-api.mdx
 publishedAt: '2021-08-05T22:00:00.000Z'
 ---
 
