--- a/content/posts/react/context-api.mdx
+++ b/content/posts/react/context-api.mdx
@@ -7,7 +7,11 @@ category: react
 tags:
   options:
     - react
-featured: true
+featured: false
+relatedPosts:
+  postOne: content/posts/react/indice.mdx
+  postTwo: content/posts/react/conceptos-avanzados.mdx
+  postThree: content/posts/react/class-components.mdx
 draft: false
 publishedAt: '2021-08-06T22:00:00.000Z'
 ---
