--- a/content/posts/react/context-devtool.mdx
+++ b/content/posts/react/context-devtool.mdx
@@ -6,6 +6,10 @@ tags:
   options:
     - react
 draft: false
+featured: false
+relatedPosts:
+  postOne: content/posts/react/indice.mdx
+  postTwo: content/posts/react/backend.mdx
 publishedAt: '2021-08-16T22:00:00.000Z'
 ---
 
