--- a/content/posts/react/functional-components.mdx
+++ b/content/posts/react/functional-components.mdx
@@ -6,7 +6,12 @@ tags:
   options:
     - react
     - hooks
+relatedPosts:
+  postOne: content/posts/react/indice.mdx
+  postTwo: content/posts/react/intro.mdx
+  postThree: content/posts/react/hooks.mdx
 draft: false
+featured: false
 publishedAt: '2021-08-02T22:00:00.000Z'
 ---
 
