--- a/content/posts/react/hooks.mdx
+++ b/content/posts/react/hooks.mdx
@@ -6,7 +6,12 @@ tags:
   options:
     - hooks
     - react
+relatedPosts:
+  postOne: content/posts/react/indice.mdx
+  postTwo: content/posts/react/functional-components.mdx
+  postThree: content/posts/react/class-components.mdx
 draft: false
+featured: false
 publishedAt: '2021-08-04T22:00:00.000Z'
 ---
 
