--- a/content/posts/react/indice.mdx
+++ b/content/posts/react/indice.mdx
@@ -12,6 +12,7 @@ relatedPosts:
   postTwo: content/posts/react/functional-components.mdx
   postThree: content/posts/react/class-components.mdx
 draft: false
+featured: true
 publishedAt: '2021-07-31T22:00:00.000Z'
 ---
 
